k8s/Pyrrha/templates/ingresses/norewriteingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyrrha-norewrite-ingress
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
spec:
  rules:
    - host: TBD
      http:
        paths:
          - backend:
              service:
                name: api-main
                port:
                  number: 5000
            path: /api-main(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: api-auth
                port:
                  number: 4000
            path: /api-auth(/|$)(.*)
            pathType: Prefix
